<resources>
    <string name="app_name">BMICalculator</string>
    <string name="password">password</string>
    <string name="email_id">email_id</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="new_user">New User?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="body_compositions">Body Compositions</string>
    <string name="gender">gender</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="age">age</string>
    <string name="submit">Submit</string>
    <string name="logout">logout</string>
    <string name="very_severely_underweight">You are UnderWeight!</string>
    <string name="severely_underweight">Severely UnderWeight</string>
    <string name="underweight">UnderWeight !</string>
    <string name="normal">You are Normal</string>
    <string name="overweight">You are OverWeight!</string>
    <string name="obese_class_i">Obese Class 1</string>
    <string name="obese_class_ii">Obese Class 2</string>
    <string name="obese_class_iii">Obese Class 3</string>

</resources>